grafana/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: grafana
spec: {}
status: {}
