grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/app: grafana
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/app: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/app: grafana
    spec:
      containers:
        - name: grafana-server
          image: grafana/grafana-enterprise
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-config
      volumes:
        - name: grafana-config
          persistentVolumeClaim:
            claimName: grafana-config
