grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/app: grafana
  name: grafana-service
spec:
  ports:
  - name: prom
    port: 3000
    protocol: TCP
    targetPort: 3000 
  selector:
    app.kubernetes.io/app: grafana
