grafana/ingressroute.yaml
---
# Taken from https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#traefik-v22
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.home.k8r.io
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`metrics.home.k8r.io`)
      priority: 10
      services:
        - name: grafana-service
          port: 3000
